<resources>
    <string name="app_name">TrainingMobileD20</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_button">search_button</string>
    <string name="filter_button">filter_button</string>
    <string name="student_name">Student Name</string>
    <string name="year_of_birth">1995</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="btnDetail">CHI TIẾT</string>
    <string name="nothing_here"><![CDATA[Nothing here :>]]></string>
    <string name="btnDemo">Demo</string>
    <string name="btnGoFood">GoFood</string>
    <string name="tv_rating">5.0</string>
    <string name="tv_brand">Nem Nướng Nha Trang Cô Liên</string>
    <string name="tv_note">1 Nem Nướng Nha Trang, Size M, 1 Phở, 1 Nước Chấm</string>
    <string name="tv_sum_money">38000</string>
    <string name="tv_number_dish">3 món</string>
    <string name="tv_saved_money">Đã tiết kiệm được 30k!</string>
    <string name="tv_oder_time">26 thg 3 2022, 18:10</string>
    <string name="btn_oder_again">Đặt lại</string>
    <string name="tv_sum_dish">0 món</string>
    <string name="tv_info">Gà Rán KFC Văn Định, Phùng Khoang</string>
    <string name="tv_sum_money_all_dish">0</string>
</resources>