<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="6dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="6dp"
    android:elevation="@dimen/cardview_compat_inset_shadow"
    app:cardBackgroundColor="#e1f5fe"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="6dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imvThumbnail"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_android_black_24dp"
            app:layout_constraintBottom_toTopOf="@id/expandContent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tvName"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/student_name"
            android:textColor="@color/blue_grey"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imvThumbnail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvYearOfBird"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:text="@string/year_of_birth"
            android:textColor="@color/blue_grey"
            app:layout_constraintStart_toEndOf="@+id/imvThumbnail"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_grey"
            android:text="@string/btnDetail"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/expandContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/imvThumbnail" />

        <RelativeLayout
            android:id="@+id/expandContent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/imvThumbnail"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/nothing_here" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>