<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.trainingmobiled20.fragment.gofoodFragment.GoFoodFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewGoFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_go_food" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="12dp" />
        </LinearLayout>

    </ScrollView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/green_a400"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSumDish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/tv_sum_dish"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSumDish"
                android:layout_alignParentStart="true"
                android:layout_gravity="bottom"
                android:layout_toStartOf="@+id/tvSumMoneyOfAllDish"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/tv_info"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSumMoneyOfAllDish"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:drawableEnd="@drawable/ic_round_shopping_basket_24"
                android:drawablePadding="6dp"
                android:elevation="2dp"
                android:gravity="end"
                android:text="@string/tv_sum_money_all_dish"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>